# From the lessons and tutorials
add_executable(lesson6-pointers lesson6-pointers.cpp)
add_executable(lesson7a-structures lesson7a-structures.cpp)
add_executable(lesson7b-structures lesson7b-structures.cpp)
add_executable(lesson8-arrays lesson8-arrays.cpp)
add_executable(lesson9-strings lesson9-strings.cpp)
add_executable(lesson10-io lesson10-io.cpp)
add_executable(lesson15-linked-lists lesson15-linked-lists.cpp)


# My own attempts
add_executable(linked-list-test linked-list-test.cpp)
